# MTGA_Draft_17Lands

./: .gitignore  .gitmodules  INTEGRATION.md  LICENSE  README.md  card_logic.py  dark_mode.tcl  main.py  pyproject.toml  release_notes.txt  requirements.txt  ryanbot.py
.github/ISSUE_TEMPLATE/: BUG-REPORT-EXT.yml  BUG-REPORT.yml
.github/workflows/: build-windows-exe.yml  javascript-tier-scraper.yml  python-linux.yml  python-macos.yml  python-windows.yml
Tools/TierScraper17Lands/: README.md  package.json
Tools/TierScraper17Lands/src/: 17LandsTier.css  17LandsTier.js  manifest.json
Tools/TierScraper17Lands/tests/: collectPickRatings.test.js
builder/: Installer.iss
model/: metadata.json
model/draft/: metadata.json
src/: app_update.py  card_logic.py  configuration.py  constants.py  dataset.py  draft_inference.py  file_extractor.py  limited_sets.py  log_scanner.py  logger.py  ocr.py  overlay.py  recommendations.py  scaled_window.py  set_metrics.py  tier_list.py  utils.py
tests/: test_app_update.py  test_card_logic.py  test_configuration.py  test_dataset.py  test_limited_sets.py  test_log_scanner.py  test_overlay.py  test_set_metrics.py  test_utils.py
tests/data/: FIN_PremierDraft_Data_Test.json  FIN_PremierDraft_Test.json
